framec_tests/language_specific/python/v3_capabilities/system_params/positive/system_params_multi_groups_v3.frm
@target python_3

# @core

system SystemParamsMultiPy($(color), $>(enterColor), $(extra)) {
    interface:
        run(extra)

    machine:
        $Red(color, extra) {
            $>(enterColor) { }
            run(extra) {
                -> $Red(color, extra)
            }
        }

    domain:
        extra = "x"
}
