framec_tests/language_specific/python/v3_capabilities/system_params/negative/system_domain_param_mismatch_v3.frm
@target python_3
# @expect: E418

# Negative: domain param name does not match any variable in domain: block.

system SystemDomainParamMismatch($(color), $>(enter_color), badDomain) {
    interface:
        run()

    machine:
        $Red(color) {
            $>(enter_color) {
            }
            run() {
                -> $Red(color)
            }
        }

    domain:
        domain = None
}

